--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -802,6 +802,25 @@ get_subscription_details_prl =  SELECT \
                                 t1.subscriptionID = ? AND \
                                 t1.endYear = ?
 
+get_subscription_for_prl_invoice = SELECT t6.journalGroupName, t1.period, t5.rate \
+                                    FROM prl_details t1, \
+                                         invoice t2, \
+                                         subscription t3, \
+                                         subscriptiondetails t4, \
+                                         subscription_rates t5, \
+                                         journal_groups t6, \
+                                         subscriber t7 \
+                                   WHERE     t1.invoice_id = t2.id \
+                                         AND t2.subscriptionId = t3.id \
+                                         AND t3.id = t4.subscriptionID \
+                                         AND t4.journalGroupID = t6.id \
+                                         AND t3.subscriberID = t7.id \
+                                         AND t5.journalGroupId = t4.journalGroupID \
+                                         AND t5.subtypeId = t7.subtype \
+                                         AND t5.period = t1.period \
+                                         AND t5.`year` = ? \
+                                         AND t3.id = ?
+
 get_subscription_details_free_subscribers = SELECT \
                                                 t3.journalGroupName, \
                                                 t2.startYear, \
@@ -1061,8 +1080,7 @@ subscription_Figures = SELECT count(subscriber.subscriberNumber), sum(subscripti
                                 ON journal_group_contents.journalGroupId = journal_groups.id \
                              LEFT JOIN journals \
                                 ON journal_group_contents.journalId = journals.id \
-                       WHERE     subscriptiondetails.active = true \
-                             AND journals.journalCode = ? \
+                       WHERE  journals.journalCode = ? \
                              AND subscriber_type.subtypecode = ? \
                              AND curdate() BETWEEN date_format( \
                                                       concat(subscriptiondetails.startYear, \
@@ -1952,6 +1970,10 @@ get_journal_grp_price = SELECT \
                             t1.subtypeId = ? AND \
                             t1.`year` = ? AND \
                             t1.period = ?
+
+get_journal_group_price_for_minimum_period = SELECT min(t1.period) as period \
+                                                FROM subscription_rates t1 \
+                                               WHERE t1.journalGroupId = ? AND t1.subtypeId = ? AND t1.year = ?
 
 insert_payment = INSERT INTO payment(inwardID, \
                     invoice_id, \
