--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -563,8 +563,8 @@ get_missing_issues_for_subscriber = SELECT t1.ID as id,\
                                         t2.SENTON as senton \
                                    FROM missing_issue t1,\
                                         missing_issue_journals t2,\
-                                        INWARD t3,\
-                                        JOURNALS t4 \
+                                        inward t3,\
+                                        journals t4 \
                                 WHERE     t1.SUBSCRIBERID = ? \
                                       AND t1.ID = t2.MISSINGISSUEID \
                                       AND t3.ID = t1.INWARDID \
@@ -672,7 +672,7 @@ get_subscription_info_by_id =   SELECT t6.ID, \
                                                       t2.INWARDNUMBER, \
                                                       (sum(COALESCE(t13.AMOUNT, 0)) + COALESCE(t2.AMOUNT, 0)) \
                                                          AS amount \
-                                                 FROM SUBSCRIPTION t1 \
+                                                 FROM subscription t1 \
                                                       LEFT JOIN inward t2 \
                                                          ON t1.inwardID = t2.id \
                                                       LEFT JOIN invoice t12 \
@@ -684,7 +684,7 @@ get_subscription_info_by_id =   SELECT t6.ID, \
                                            LEFT JOIN \
                                               (SELECT t7.SUBSCRIPTIONID, \
                                                       sum(t7.COPIES * t8.RATE) AS subscriptiontotal \
-                                                 FROM SUBSCRIPTIONDETAILS t7, SUBSCRIPTION_RATES t8 \
+                                                 FROM subscriptiondetails t7, subscription_rates t8 \
                                                 WHERE t7.JOURNALPRICEGROUPID = t8.ID AND t7.ACTIVE = TRUE \
                                                GROUP BY t7.SUBSCRIPTIONID) t9 \
                                            ON t6.ID = t9.SUBSCRIPTIONID \
@@ -889,7 +889,7 @@ get_subscription_inward_amount =    SELECT t3.INWARDNUMBER as inwardNumber, sum(
                                                FROM subscription t1, inward t2 \
                                               WHERE t1.INWARDID = t2.ID AND t1.id = ?) t3 \
                                          LEFT JOIN \
-                                            (PAYMENT t4, INWARD t5) \
+                                            (payment t4, inward t5) \
                                          ON t3.id = t4.SUBSCRIPTIONID AND t4.inwardID = t5.id
 #--------------------------------------------------------------------------
 # Reports
