--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -385,12 +385,25 @@ update_payment_info = update payment set subscriptionID=? where inwardID=(select
 update_urn_info = update inward set chqDDNumber=?,amount=?, paymentDate=? where inwardNumber=?
 
 # The where/and clause is formed dynamically in the searchInward in IAS.Model.inward.java
-search_inwards = select t1.id as inwardID, inwardNumber, t4.subscriberNumber as subscriberId, t1.from, DATE_FORMAT(inwardCreationDate,'%d/%m/%Y') as inwardCreationDate, t2.city as city, chqddNumber, t3.purpose as inwardPurpose, \
-                t1.inwardPurpose as inwardPurposeID, t1.amount, t1.completed from inward t1 \
-                left join cities t2 on t1.city = t2.id \
-                left join inward_purpose t3 on t1.inwardPurpose = t3.id \
-                left join subscriber t4 on t1.subscriberId = t4.id \
-                where inwardNumber is not NULL
+search_inwards = SELECT t1.id AS inwardID, \
+                        inwardNumber, \
+                        t4.subscriberNumber AS subscriberId, \
+                        t1.from, \
+                        DATE_FORMAT(inwardCreationDate, '%d/%m/%Y') AS inwardCreationDate, \
+                        t2.city AS city, \
+                        chqddNumber, \
+                        t3.purpose AS inwardPurpose, \
+                        t1.inwardPurpose AS inwardPurposeID, \
+                        t1.amount, \
+                        t1.completed \
+                   FROM inward t1 \
+                        LEFT JOIN cities t2 \
+                           ON t1.city = t2.id \
+                        LEFT JOIN inward_purpose t3 \
+                           ON t1.inwardPurpose = t3.id \
+                        LEFT JOIN subscriber t4 \
+                           ON t1.subscriberId = t4.id \
+                  WHERE inwardNumber IS NOT NULL
 
 search_subscriber_inward = SELECT t1.id, \
                                 inwardNumber, \
@@ -422,14 +435,29 @@ search_inward_count = select count(*) from inward t1 \
                 left join subscriber t4 on t1.subscriberId = t4.id \
                 where inwardNumber is not NULL
 
-pending_inwards = select inwardNumber, t4.subscriberNumber as subscriberId, t14.agentName, t1.from, t1.amount, DATE_FORMAT(inwardCreationDate,'%d/%m/%Y') as inwardCreationDate, t2.city as city, chqddNumber, t3.purpose as inwardPurpose, \
-                t1.inwardPurpose as inwardPurposeID, t1.inwardCreationDate as sortdate from inward t1 \
-                left join cities t2 on t1.city = t2.id \
-                left join inward_purpose t3 on t1.inwardPurpose = t3.id \
-                left join subscriber t4 on t1.subscriberId = t4.id \
-                left join inward_agent_details t13 on t1.id=t13.inwardId \
-                left join agents t14 on t13.agentId = t14.id \
-                where t1.completed=false
+pending_inwards = SELECT inwardNumber, \
+                        t4.subscriberNumber AS subscriberId, \
+                        t14.agentName, \
+                        t1.from, \
+                        t1.amount, \
+                        DATE_FORMAT(inwardCreationDate, '%d/%m/%Y') AS inwardCreationDate, \
+                        t2.city AS city, \
+                        LPAD(chqddNumber, 6, '0') as chqddNumber, \
+                        t3.purpose AS inwardPurpose, \
+                        t1.inwardPurpose AS inwardPurposeID, \
+                        t1.inwardCreationDate AS sortdate \
+                   FROM inward t1 \
+                        LEFT JOIN cities t2 \
+                           ON t1.city = t2.id \
+                        LEFT JOIN inward_purpose t3 \
+                           ON t1.inwardPurpose = t3.id \
+                        LEFT JOIN subscriber t4 \
+                           ON t1.subscriberId = t4.id \
+                        LEFT JOIN inward_agent_details t13 \
+                           ON t1.id = t13.inwardId \
+                        LEFT JOIN agents t14 \
+                           ON t13.agentId = t14.id \
+                  WHERE t1.completed = FALSE
 
 update_cheque_return =  update inward set \
                         chequeDDReturn = ?, chequeDDReturnReason = (select id from inward_return_reasons where return_reason=?), \
