--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -1006,7 +1006,7 @@ subscriber_type = select subtypecode from subscriber_type
 statement = select subtypecode, count(subscriberId), sum(copies) \
             FROM mailing_list_detail \
             where journalId = ? and issue = ? and `year` = ? and subtypecode = ? \
-            group by subtypecode
+            and volumeNumber = ? group by subtypecode
 
 !End statement ---------------------------------------------
 
@@ -1014,7 +1014,7 @@ statement = select subtypecode, count(subscriberId), sum(copies) \
 
 cf_journals = SELECT id, journalCode from journals
 
-cf_issue = select issue from mailing_list where `year` = ?  and journalId = ? and month = (select months.Id from months where months.month = ?)
+cf_issue_volumeno = select issue, volumeNumber from mailing_list where `year` = ?  and journalId = ? and month = (select months.Id from months where months.month = ?)
 
 cf_print_order = select printOrder from print_order where `year` = ? and journalId = ? and issueNo = ?
 
@@ -1023,6 +1023,7 @@ cf_inst_i = select sum(mailing_list_detail.copies) as inst_i \
                 where subscriber_type.nationality = 'I' AND subscriber_type.institutional = 'I' \
                 and mailing_list_detail.`year` = ? and subscriber_type.subtype = 'PAID' \
                 and mailing_list_detail.journalId = ? and mailing_list_detail.issue = ? \
+                and mailing_list_detail.volumeNumber = ? \
                 group by \
                 mailing_list_detail.journalId, mailing_list_detail.`year`, mailing_list_detail.issue, subscriber_type.institutional, subscriber_type.nationality
 
@@ -1031,6 +1032,7 @@ cf_inst_f = select sum(mailing_list_detail.copies) as inst_f \
             where subscriber_type.nationality = 'F' AND subscriber_type.institutional = 'I' \
             and mailing_list_detail.`year` = ? and subscriber_type.subtype = 'PAID' \
             and mailing_list_detail.journalId = ? and mailing_list_detail.issue = ? \
+            and mailing_list_detail.volumeNumber = ? \
             group by \
             mailing_list_detail.journalId, mailing_list_detail.`year`, mailing_list_detail.issue, subscriber_type.institutional, subscriber_type.nationality
 
@@ -1039,6 +1041,7 @@ cf_ind_i =  select sum(mailing_list_detail.copies) as ind_i \
             where subscriber_type.nationality = 'I' AND subscriber_type.institutional = 'P' \
             and mailing_list_detail.`year` = ? and subscriber_type.subtype = 'PAID' \
             and mailing_list_detail.journalId = ? and mailing_list_detail.issue = ? \
+            and mailing_list_detail.volumeNumber = ? \
             group by \
             mailing_list_detail.journalId, mailing_list_detail.`year`, mailing_list_detail.issue, subscriber_type.institutional, subscriber_type.nationality
 
@@ -1047,6 +1050,7 @@ cf_ind_f = select sum(mailing_list_detail.copies) as ind_f \
             where subscriber_type.nationality = 'F' AND subscriber_type.institutional = 'P' \
             and mailing_list_detail.`year` = ? and subscriber_type.subtype = 'PAID' \
             and mailing_list_detail.journalId = ? and mailing_list_detail.issue = ? \
+            and mailing_list_detail.volumeNumber = ? \
             group by \
             mailing_list_detail.journalId, mailing_list_detail.`year`, subscriber_type.institutional, subscriber_type.nationality, mailing_list_detail.issue
 
@@ -1055,6 +1059,7 @@ cf_free = select sum(mailing_list_detail.copies) as comp \
             where subscriber_type.subtype = 'FREE' and subscriber_type.subtypecode <> 'AUTH'\
             and mailing_list_detail.`year` = ? \
             and mailing_list_detail.journalId = ? and mailing_list_detail.issue = ? \
+            and mailing_list_detail.volumeNumber = ? \
             group by \
             mailing_list_detail.journalId, mailing_list_detail.`year`, mailing_list_detail.issue
 
@@ -1063,6 +1068,7 @@ cf_auth = select sum(mailing_list_detail.copies) as auth \
             where subscriber_type.subtypecode = 'AUTH' \
             and mailing_list_detail.`year` = ? \
             and mailing_list_detail.journalId = ?  and mailing_list_detail.issue = ? \
+            and mailing_list_detail.volumeNumber = ? \
             group by \
             mailing_list_detail.journalId, mailing_list_detail.`year`, mailing_list_detail.issue
 
