--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -1615,7 +1615,8 @@ search_bil = select mailing_list_detail.id, mailing_list_detail.subscriptionId, 
                 mailing_list_detail.month, mailing_list_detail.`year`, mailing_list_detail.startYear, \
                 left((select month from months where months.Id = mailing_list_detail.startMonth), 3) as startMonth, \
                 mailing_list_detail.endYear, left((select month from months where months.Id = mailing_list_detail.endMonth), 3) as endMonth, \
-                subscriber_type.subtype as subType, mailing_list_detail.volumeNumber, journal_details.page_size \
+                subscriber_type.subtype as subType, mailing_list_detail.volumeNumber, journal_details.page_size, \
+                mailing_list_detail.bildate
                     FROM \
                 mailing_list_detail, subscriptiondetails, back_issue_list, subscriber_type, journals, journal_details, journal_volume_details \
                 where mailing_list_detail.subscriptionDetailId = subscriptiondetails.id and subscriptiondetails.active = '1' \
