--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -1206,7 +1206,7 @@ get_sub_journals = select journals.journalCode, \
                     left join journals on journal_group_contents.journalId = journals.id \
                     where subscriptiondetails.subscriptionID = ?
 
-get_current_balance = Select subscriber.subscriberNumber as subscriberNumber, subscription.id as subscriptionId, \
+get_current_balance = select subscriber.subscriberNumber as subscriberNumber, subscription.id as subscriptionId, \
                       subscriber_type.subtypecode as subtypeCode, \
                      invoice.amount as amount, sum(payment.amount) as payment, invoice.invoiceNumber as proInvNo, date_format(invoice.invoiceCreationDate, '%d/%M/%y') as proInvDate \
                      from \
@@ -1616,8 +1616,8 @@ search_bil = select mailing_list_detail.id, mailing_list_detail.subscriptionId, 
                 left((select month from months where months.Id = mailing_list_detail.startMonth), 3) as startMonth, \
                 mailing_list_detail.endYear, left((select month from months where months.Id = mailing_list_detail.endMonth), 3) as endMonth, \
                 subscriber_type.subtype as subType, mailing_list_detail.volumeNumber, journal_details.page_size, \
-                mailing_list_detail.bildate
-                    FROM \
+                mailing_list_detail.bildate \
+                from \
                 mailing_list_detail, subscriptiondetails, back_issue_list, subscriber_type, journals, journal_details, journal_volume_details \
                 where mailing_list_detail.subscriptionDetailId = subscriptiondetails.id and subscriptiondetails.active = '1' \
                 and mailing_list_detail.subtypecode = subscriber_type.subtypecode \
