--- a/web/WEB-INF/classes/jds_mailinglist.properties
+++ b/web/WEB-INF/classes/jds_mailinglist.properties
@@ -41,22 +41,23 @@ pageHeight    = 297.0
 #210mm = For A4 size paper
 pageWidth     = 210.0
 ########Information for Label########
-lfixedLeading     = 0.0
+lfixedLeading     = 1.0
 lmultipliedLeading = 1.2
+lmultipliedLeadingPlus = 1.2
 ltextAlignment   = 0
 lfontFamily      = Courier
 lfontSize        = 12
 lfontStyle       = NORMAL
 lfontSizeHeader  = 10
 
-llx1    = 170.1
+llx1    = 198
 lly1    = 141.7
-urx1    = 425.2
+urx1    = 453.1
 ury1    = 255.12
 
-llx2    = 170.1
+llx2    = 198
 lly2    = 578.27
-urx2    = 425.2
+urx2    = 453.1
 ury2    = 691.65
 
 #Information for Footer for LABEL
