--- a/trunk/web/WEB-INF/classes/jds_email.properties
+++ b/trunk/web/WEB-INF/classes/jds_email.properties
@@ -14,6 +14,8 @@
 #ns1.ias.ac.in : 111.93.135.162
 #---------Common---------------------------
 FROM_TEXT      = Indian Academy Of Sciences
+BCC_EMAIL       = jds.adm.all@gmail.com
+EXCEPTION_EMAIL = jds.adm.all@gmail.com
 #---------IAS config---------------------------
 #FROM_EMAIL_ID  = orders@ias.ernet.in
 #SMTP_HOST_NAME = 111.93.135.162
