--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -53,7 +53,7 @@ file.reference.jstl-impl-1.2.jar=lib\\jstl-impl-1.2.jar
 file.reference.jxl.jar=lib\\jxl.jar
 file.reference.log4j-1.2.16.jar=lib\\log4j-1.2.16.jar
 file.reference.mail.jar=lib/javamail-1.4.4/mail.jar
-file.reference.mysql-connector-java-5.1.22-bin.jar=lib/mysql-connector-java-5.1.22-bin.jar
+file.reference.mysql-connector-java-5.1.22-bin.jar=lib\\mysql-connector-java-5.1.22-bin.jar
 file.reference.simple-java-mail-2.0.jar=lib\\simple-java-mail-2.0.jar
 file.reference.smtp.jar=lib/javamail-1.4.4/smtp.jar
 file.reference.xmlpull-1.1.3.1.jar=lib\\xmlpull-1.1.3.1.jar
@@ -92,7 +92,8 @@ javac.classpath=\
     ${file.reference.commons-io-2.4.jar}:\
     ${file.reference.jxl.jar}:\
     ${file.reference.xstream-1.4.3.jar}:\
-    ${file.reference.xmlpull-1.1.3.1.jar}
+    ${file.reference.xmlpull-1.1.3.1.jar}:\
+    ${file.reference.mysql-connector-java-5.1.22-bin.jar}
     ${file.reference.mail.jar}:\
     ${file.reference.smtp.jar}
 # Space-separated list of extra javac options
