--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -512,16 +512,17 @@ update_inward_complete_flag = update inward set completed = true where id = ?
 
 insert_in_agent_dtls = insert into inward_agent_details ( inwardId , agentId ) values (? , (select id from agents where agentName = ?))
 
-update_in_agent_dtls = INSERT INTO inward_agent_details(inwardId, agentId) \
-                        VALUES ((SELECT id \
-                                    FROM inward \
-                                    WHERE inwardNumber = ?), \
-                                COALESCE((SELECT id \
-                                   FROM agents \
-                                  WHERE agentName = ?), 0)) \
-                        ON DUPLICATE KEY UPDATE agentId = VALUES(agentId)
+update_in_agent_dtls = UPDATE inward_agent_details t1 \
+                            SET agentId = \
+                                   COALESCE((SELECT id \
+                                               FROM agents \
+                                              WHERE agents.agentName = ?), \
+                                            0) \
+                          WHERE t1.inwardId = ?
 
-get_in_agent_dtls = select agentName from agents where id = (select agentId from inward_agent_details where inwardId = ? )
+get_in_agent_dtls = SELECT count(*) as count \
+                        FROM inward_agent_details t1 \
+                       WHERE t1.inwardId = ?
 
 
 #--------------------------------------------------------------------------
