--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -692,77 +692,54 @@ get_first_subscriber_number = select subscriberNumber from subscriber where id =
 #--------------------------------------------------------------------------
 # Subscription
 #--------------------------------------------------------------------------
-get_subscription_for_subscriber =   SELECT t10.id, \
-                                        t10.inwardNumber, \
-                                        t10.inwardID, \
-                                        t10.subscriptionDate, \
-                                        t10.subscriptionTotal, \
-                                        t10.legacy, \
-                                        t10.currency, \
-                                        (  subscriptionTotal \
-                                         - (COALESCE(t10.amount, 0) + sum(COALESCE(t12.amount, 0)))) \
-                                           AS balance, \
-                                        COALESCE(t10.legacy_balance, 0) as legacy_balance, \
-                                        t14.agentName, \
-                                        t10.chqddNumber, \
-                                        t10.amount AS inwardAmount, \
-                                        sum(COALESCE(t12.amount, 0)) AS payment, \
-                                        (t10.amount + sum(COALESCE(t12.amount, 0))) AS amountPaid, \
-                                        t10.receiptNumber, \
-                                        t10.receiptDate, \
-                                        COALESCE(t14.discount, 0) as discount, \
-                                        t10.active \
-                                   FROM          (SELECT t4.id, \
-                                                         t5.id AS inwardID, \
-                                                         t5.inwardNumber, \
-                                                         t4.subscriptionDate, \
-                                                         t4.subscriptionTotal, \
-                                                         t4.legacy, \
-                                                         t4.legacy_balance, \
-                                                         t6.currency, \
-                                                         t5.chqddNumber, \
-                                                         t5.amount, \
-                                                         t5.receiptNumber, \
-                                                         DATE_FORMAT(t5.receiptDate, '%d/%m/%Y') \
-                                                            AS receiptDate, \
-                                                         t4.active \
-                                                    FROM (SELECT t20.id, \
-                                                                 t20.subscriptionDate, \
-                                                                 t20.subscriptionTotal, \
-                                                                 t20.inwardID, \
-                                                                 COALESCE(t21.legacy, 0) AS legacy, \
-                                                                 t21.legacy_balance, \
-                                                                 t20.active \
-                                                            FROM    (SELECT t1.id, \
-                                                                            DATE_FORMAT(t1.subscriptionDate, '%d/%m/%Y') AS subscriptionDate, \
-                                                                            COALESCE(sum(t2.copies * t5.rate), 0) AS subscriptionTotal, \
-                                                                            t1.inwardID, \
-                                                                            t1.active \
-                                                                       FROM (subscription t1, \
-                                                                            subscriptiondetails t2, \
-                                                                            subscriber t3) left join subscription_rates t5 on t2.journalPriceGroupID = t5.id \
-                                                                      WHERE t3.subscriberNumber = ? \
-                                                                            AND t1.id = t2.subscriptionID \
-                                                                            AND t1.subscriberID = t3.id \
-                                                                     GROUP BY t1.id) t20 \
-                                                                 LEFT JOIN \
-                                                                    subscription_legacy t21 \
-                                                                 ON t20.id = t21.subscription_id) t4 \
-                                                         LEFT JOIN inward t5 \
-                                                            ON t4.inwardID = t5.id \
-                                                         LEFT JOIN currency t6 \
-                                                            ON t5.currency = t6.id) t10 \
-                                              LEFT JOIN \
-                                                 invoice t11 \
-                                              ON t10.id = t11.subscriptionId \
-                                           LEFT JOIN \
-                                              payment t12 \
-                                           ON t11.id = t12.invoice_id \
-                                        LEFT JOIN \
-                                           (inward_agent_details t13, agents t14) \
-                                        ON t10.inwardID = t13.inwardId AND t13.agentID = t14.id \
-                                 GROUP BY t10.id \
-                                 ORDER BY t10.id DESC
+get_subscription_for_subscriber =   SELECT t1.id, \
+                                            t6.inwardNumber, \
+                                            t6.id AS inwardID, \
+                                            DATE_FORMAT(t1.subscriptionDate, '%d/%m/%Y') AS subscriptionDate, \
+                                            /*cost per copy * no of copies = subscription value*/ \
+                                            COALESCE(sum(t2.copies * t4.rate), 0) AS subscriptionTotal, \
+                                            t5.legacy, \
+                                            t7.currency, \
+                                            /* \
+                                            * balance = subscription total - (inward amount + payments made) \
+                                            */ \
+                                            (  COALESCE(sum(t2.copies * t4.rate), 0) \
+                                             - (COALESCE(t6.amount, 0) + sum(COALESCE(t9.amount, 0)))) \
+                                               AS balance, \
+                                            COALESCE(t5.legacy_balance, 0) AS legacy_balance, \
+                                            t11.agentName, \
+                                            t6.chqddNumber, \
+                                            t6.amount AS inwardAmount, \
+                                            sum(COALESCE(t9.amount, 0)) AS payment, \
+                                            (t6.amount + sum(COALESCE(t9.amount, 0))) AS amountPaid, \
+                                            t6.receiptNumber, \
+                                            t6.receiptDate, \
+                                            COALESCE(t11.discount, 0) AS discount, \
+                                            t1.active \
+                                       FROM subscription t1 \
+                                            INNER JOIN subscriptiondetails t2 \
+                                               ON t1.id = t2.subscriptionID \
+                                            INNER JOIN subscriber t3 \
+                                               ON t1.subscriberID = t3.id \
+                                            LEFT JOIN subscription_rates t4 \
+                                               ON t2.journalPriceGroupID = t4.id \
+                                            LEFT JOIN subscription_legacy t5 \
+                                               ON t1.id = t5.subscription_id \
+                                            LEFT JOIN inward t6 \
+                                               ON t1.inwardID = t6.id \
+                                            LEFT JOIN currency t7 \
+                                               ON t6.currency = t7.id \
+                                            LEFT JOIN invoice t8 \
+                                               ON t1.id = t8.subscriptionId \
+                                            LEFT JOIN payment t9 \
+                                               ON t8.id = t9.invoice_id \
+                                            LEFT JOIN inward_agent_details t10 \
+                                               ON t6.id = t10.inwardId \
+                                            LEFT JOIN agents t11 \
+                                               ON t10.agentId = t11.id \
+                                      WHERE t3.subscriberNumber = ? \
+                                     GROUP BY t1.id \
+                                     ORDER BY t1.id DESC
 
 get_subscription_info_by_id =   SELECT t6.ID, \
                                         t6.INWARDNUMBER AS inwardNumber, \
