--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -1957,7 +1957,7 @@ get_month_mi = select months.month from months, mailing_list, journals \
             where mailing_list.journalId = journals.id \
                 and mailing_list.month = months.id and journals.journalName = ? and mailing_list.`year` = ?
 
-get_volume_mi = select journal_volume_details.volume_number \
+get_volume_mi = select distinct (journal_volume_details.volume_number) \
                 from journals, journal_volume_details, mailing_list, journal_details \
                 where mailing_list.volumeNumber = journal_volume_details.volume_number \
                 and journal_volume_details.journal_details_id = journal_details.id \
